--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [ubuntu-latest, macos-latest]
+        # os: [ubuntu-latest, windows-latest, macos-latest]
 
     steps:
     - uses: actions/checkout@v4
@@ -44,7 +45,11 @@ jobs:
       # For simplicity here, we assume a custom action or skip detailed setup 
       # in this template, as "qgis-dev" is not a simple apt-get.
       # A robust way is using a Docker container for Windows build or similar.
-      run: echo "Windows build setup requires advanced OSGeo4W scripting"
+    - name: Install QGIS Dev (Windows)
+      if: runner.os == 'Windows'
+      run: |
+        choco install qgis-ltr -y
+      shell: cmd
 
     # --- macOS Setup ---
     - name: Install Dependencies (macOS)
