--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,6 +28,7 @@ jobs:
           qtbase5-dev \
           qttools5-dev \
           libqt5svg5-dev \
+          qt3d5-dev \
           cmake \
           build-essential
 
