--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -88,4 +88,4 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: QGIS-Plugin-${{ runner.os }}
-        path: build/**/libflythrough_pro_cpp.*
+        path: build/**/*flythrough_pro_cpp.*
