ENABLE ANIMATION: Re-enable 3D headers for Win/Mac/Linux, skip FFmpeg

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,13 +11,7 @@ set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTORCC ON)
 
 # Find QGIS and Qt dependencies
-find_package(Qt5 COMPONENTS Core Gui Widgets Xml Network REQUIRED)
-
-# Conditional: Try to find Qt3D only on non-Windows (or wherever it works)
-if(NOT WIN32)
-    find_package(Qt5 COMPONENTS 3DCore 3DRender 3DInput 3DLogic 3DExtras REQUIRED)
-endif()
-
+find_package(Qt5 COMPONENTS Core Gui Widgets Xml Network 3DCore 3DRender 3DInput 3DLogic 3DExtras REQUIRED)
 find_package(QGIS REQUIRED)
 
 # Includes
@@ -28,19 +22,14 @@ include_directories(
     ${Qt5Widgets_INCLUDE_DIRS}
     ${Qt5Xml_INCLUDE_DIRS}
     ${Qt5Network_INCLUDE_DIRS}
+    ${Qt53DCore_INCLUDE_DIRS}
+    ${Qt53DRender_INCLUDE_DIRS}
+    ${Qt53DInput_INCLUDE_DIRS}
+    ${Qt53DLogic_INCLUDE_DIRS}
+    ${Qt53DExtras_INCLUDE_DIRS}
     ${QGIS_INCLUDE_DIR}
+    ${QGIS_INCLUDE_DIR}/3d
 )
-
-if(NOT WIN32)
-    include_directories(
-        ${Qt53DCore_INCLUDE_DIRS}
-        ${Qt53DRender_INCLUDE_DIRS}
-        ${Qt53DInput_INCLUDE_DIRS}
-        ${Qt53DLogic_INCLUDE_DIRS}
-        ${Qt53DExtras_INCLUDE_DIRS}
-        ${QGIS_INCLUDE_DIR}/3d
-    )
-endif()
 
 # Source files
 set(SRCS
@@ -69,20 +58,15 @@ target_link_libraries(flythrough_pro_cpp
     Qt5::Widgets
     Qt5::Xml
     Qt5::Network
+    Qt5::3DCore
+    Qt5::3DRender
+    Qt5::3DInput
+    Qt5::3DLogic
+    Qt5::3DExtras
     ${QGIS_CORE_LIBRARY}
     ${QGIS_GUI_LIBRARY}
+    ${QGIS_3D_LIBRARY}
 )
-
-if(NOT WIN32)
-    target_link_libraries(flythrough_pro_cpp
-        Qt5::3DCore
-        Qt5::3DRender
-        Qt5::3DInput
-        Qt5::3DLogic
-        Qt5::3DExtras
-        ${QGIS_3D_LIBRARY}
-    )
-endif()
 
 # Definitions
 target_compile_definitions(flythrough_pro_cpp PRIVATE FLYTHROUGH_PRO_CPP_LIBRARY)
