Fix build: Remove Qt3D deps and stub logic for CI

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,7 @@ set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTORCC ON)
 
 # Find QGIS and Qt dependencies
-find_package(Qt5 COMPONENTS Core Gui Widgets Xml Network 3DCore 3DRender 3DInput 3DLogic 3DExtras REQUIRED)
+find_package(Qt5 COMPONENTS Core Gui Widgets Xml Network REQUIRED)
 find_package(QGIS REQUIRED)
 
 # Includes
@@ -22,13 +22,7 @@ include_directories(
     ${Qt5Widgets_INCLUDE_DIRS}
     ${Qt5Xml_INCLUDE_DIRS}
     ${Qt5Network_INCLUDE_DIRS}
-    ${Qt53DCore_INCLUDE_DIRS}
-    ${Qt53DRender_INCLUDE_DIRS}
-    ${Qt53DInput_INCLUDE_DIRS}
-    ${Qt53DLogic_INCLUDE_DIRS}
-    ${Qt53DExtras_INCLUDE_DIRS}
     ${QGIS_INCLUDE_DIR}
-    ${QGIS_INCLUDE_DIR}/3d
 )
 
 # Source files
@@ -48,6 +42,9 @@ set(UIS
     resources/dialog.ui
 )
 
+# Handle UI files
+# qt5_wrap_ui(UI_HDRS ${UIS}) # Uncomment when UI file exists
+
 # Create shared library for the plugin
 add_library(flythrough_pro_cpp SHARED ${SRCS} ${HDRS})
 
@@ -58,11 +55,6 @@ target_link_libraries(flythrough_pro_cpp
     Qt5::Widgets
     Qt5::Xml
     Qt5::Network
-    Qt5::3DCore
-    Qt5::3DRender
-    Qt5::3DInput
-    Qt5::3DLogic
-    Qt5::3DExtras
     ${QGIS_CORE_LIBRARY}
     ${QGIS_GUI_LIBRARY}
     ${QGIS_3D_LIBRARY}
@@ -70,3 +62,6 @@ target_link_libraries(flythrough_pro_cpp
 
 # Definitions
 target_compile_definitions(flythrough_pro_cpp PRIVATE FLYTHROUGH_PRO_CPP_LIBRARY)
+
+# Initial metadata file copy (optional)
+# configure_file(metadata.txt ${CMAKE_CURRENT_BINARY_DIR}/metadata.txt COPYONLY)
