Fix Windows build: Enforce C++17 standard

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,11 @@ set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTORCC ON)
 
+# Enforce C++17 (Required by QGIS 3.28+)
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
+
 # Find QGIS and Qt dependencies
 find_package(Qt5 COMPONENTS Core Gui Widgets Xml Network REQUIRED)
 find_package(QGIS REQUIRED)
