--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,4 +48,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: QGIS-Plugin-${{ runner.os }}
-        path: build/libflythrough_pro_cpp.*
+        path: |
+          build/flythrough_pro_cpp.dll
+          build/flythrough_pro_cpp.lib
+          build/flythrough_pro_cpp.exp
