--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,46 +8,42 @@ on:
 
 jobs:
   build:
-    name: Build on ${{ matrix.os }}
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [windows-latest]
+    name: Build on Windows
+    runs-on: windows-latest
  
     steps:
     - uses: actions/checkout@v4
 
-    # --- Windows Setup (via Micromamba) ---
-    - name: Setup Micromamba (Windows)
-      if: runner.os == 'Windows'
-      uses: mamba-org/setup-micromamba@v1
+    # --- Setup OSGeo4W with QGIS Development Tools ---
+    - name: Setup OSGeo4W
+      uses: echoix/setup-OSGeo4W@v1
       with:
-        environment-name: qgis-dev
-        create-args: >-
-          qgis=3.28.3
-          qt-main
-          compilers
+        packages: >
+          qgis-dev
+          qt5-devel
           cmake
-          pkg-config
           ninja
-        init-shell: cmd.exe
 
-    # --- Build Step (Windows) ---
-    - name: Build (Windows)
-      if: runner.os == 'Windows'
+    # --- Build Step (Windows with OSGeo4W) ---
+    - name: Build QGIS Plugin
       shell: cmd
       run: |
-        echo mkdir build > build.bat
-        echo cd build >> build.bat
-        echo cmake .. -G "Ninja" -DCMAKE_BUILD_TYPE=Release -DCMAKE_PREFIX_PATH="%%CONDA_PREFIX%%" -DQGIS_DIR="%%CONDA_PREFIX%%" -DQt5_DIR="%%CONDA_PREFIX%%/Library/lib/cmake/Qt5" >> build.bat
-        echo cmake --build . --config Release >> build.bat
-        micromamba run -n qgis-dev build.bat
+        call "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
+        set PATH=%OSGEO4W_ROOT%\bin;%PATH%
+        mkdir build
+        cd build
+        cmake .. -G "Ninja" ^
+          -DCMAKE_BUILD_TYPE=Release ^
+          -DCMAKE_PREFIX_PATH="%OSGEO4W_ROOT%" ^
+          -DQGIS_INCLUDE_DIR="%OSGEO4W_ROOT%\apps\qgis-dev\include" ^
+          -DQGIS_LIBRARY_DIR="%OSGEO4W_ROOT%\apps\qgis-dev\lib"
+        cmake --build . --config Release
 
     # --- Upload Artifacts ---
     - name: Upload Plugin
       uses: actions/upload-artifact@v4
       with:
-        name: QGIS-Plugin-${{ runner.os }}
+        name: QGIS-Plugin-Windows
         path: |
           build/flythrough_pro_cpp.dll
           build/flythrough_pro_cpp.lib
