--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,42 +8,61 @@ on:
 
 jobs:
   build:
-    name: Build on Windows
+    name: Build on Windows (QGIS 3.28.3)
     runs-on: windows-latest
  
     steps:
     - uses: actions/checkout@v4
 
     # --- Setup OSGeo4W with QGIS Development Tools ---
-    - name: Setup OSGeo4W
-      uses: echoix/setup-OSGeo4W@v1
-      with:
-        packages: >
-          qgis-dev
-          qt5-devel
-          cmake
-          ninja
+    - name: Install OSGeo4W and QGIS 3.28
+      shell: cmd
+      run: |
+        curl -L -o osgeo4w-setup.exe http://download.osgeo.org/osgeo4w/v2/osgeo4w-setup.exe
+        osgeo4w-setup.exe --quiet-mode --no-desktop --only-site --root C:\OSGeo4W --site http://download.osgeo.org/osgeo4w/v2 --packages qgis-ltr-dev,qt5-devel,cmake,ninja
+        
+    - name: Wait for Installation
+      shell: cmd
+      run: timeout /t 120
+      
+    - name: Verify QGIS Installation
+      shell: cmd
+      run: |
+        set OSGEO4W_ROOT=C:\OSGeo4W
+        if exist "%OSGEO4W_ROOT%\apps\qgis-ltr\bin\qgis.exe" (
+          echo QGIS found!
+          "%OSGEO4W_ROOT%\apps\qgis-ltr\bin\qgis.exe" --version
+        ) else (
+          echo ERROR: QGIS not found at expected location
+          dir C:\OSGeo4W\apps
+          exit /b 1
+        )
 
     # --- Build Step (Windows with OSGeo4W) ---
     - name: Build QGIS Plugin
       shell: cmd
       run: |
+        set OSGEO4W_ROOT=C:\OSGeo4W
         call "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
         set PATH=%OSGEO4W_ROOT%\bin;%PATH%
+        
         mkdir build
         cd build
+        
         cmake .. -G "Ninja" ^
           -DCMAKE_BUILD_TYPE=Release ^
           -DCMAKE_PREFIX_PATH="%OSGEO4W_ROOT%" ^
-          -DQGIS_INCLUDE_DIR="%OSGEO4W_ROOT%\apps\qgis-dev\include" ^
-          -DQGIS_LIBRARY_DIR="%OSGEO4W_ROOT%\apps\qgis-dev\lib"
+          -DQGIS_INCLUDE_DIR="%OSGEO4W_ROOT%\apps\qgis-ltr-dev\include" ^
+          -DQGIS_LIBRARY_DIR="%OSGEO4W_ROOT%\apps\qgis-ltr-dev\lib" ^
+          -DQt5_DIR="%OSGEO4W_ROOT%\apps\Qt5\lib\cmake\Qt5"
+          
         cmake --build . --config Release
 
     # --- Upload Artifacts ---
     - name: Upload Plugin
       uses: actions/upload-artifact@v4
       with:
-        name: QGIS-Plugin-Windows
+        name: QGIS-Plugin-Windows-3.28
         path: |
           build/flythrough_pro_cpp.dll
           build/flythrough_pro_cpp.lib
