--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -85,6 +85,14 @@ jobs:
           
         cmake --build . --config Release
 
+    # --- Show exactly what is exported from the DLL ---
+    - name: Inspect DLL Exports
+      shell: cmd
+      run: |
+        call "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
+        echo === Exported symbols from flythrough_pro_cpp.dll ===
+        dumpbin /exports D:\a\FlyThroughProCpp\FlyThroughProCpp\build\flythrough_pro_cpp.dll
+
     # --- Upload Artifacts ---
     - name: Upload Plugin
       uses: actions/upload-artifact@v4
