--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,7 @@ jobs:
           --autoaccept ^
           --root C:\OSGeo4W ^
           --site http://download.osgeo.org/osgeo4w/v2 ^
-          --packages qgis-ltr-dev,qt5-devel,cmake,ninja
+          --packages qgis-ltr,qt5-devel,cmake,ninja
         
     - name: Wait for Installation to Complete
       shell: pwsh
@@ -38,10 +38,10 @@ jobs:
       run: |
         set OSGEO4W_ROOT=C:\OSGeo4W
         echo Checking QGIS installation...
-        dir "%OSGEO4W_ROOT%\apps\qgis-ltr-dev"
-        if exist "%OSGEO4W_ROOT%\apps\qgis-ltr-dev\bin\qgis.exe" (
-          echo QGIS LTR Dev found!
-          "%OSGEO4W_ROOT%\apps\qgis-ltr-dev\bin\qgis.exe" --version
+        dir "%OSGEO4W_ROOT%\apps\qgis-ltr"
+        if exist "%OSGEO4W_ROOT%\apps\qgis-ltr\bin\qgis.exe" (
+          echo QGIS LTR found!
+          "%OSGEO4W_ROOT%\apps\qgis-ltr\bin\qgis.exe" --version
         ) else (
           echo QGIS executable not found, but dev files should be present
           echo Continuing with build...
@@ -51,19 +51,19 @@ jobs:
       shell: cmd
       run: |
         echo === Checking QGIS Dev Installation ===
-        dir C:\OSGeo4W\apps\qgis-ltr-dev
+        dir C:\OSGeo4W\apps\qgis-ltr
         echo.
         echo === Include/qgis Directory ===
-        dir C:\OSGeo4W\apps\qgis-ltr-dev\include\qgis
+        dir C:\OSGeo4W\apps\qgis-ltr\include\qgis
         echo.
         echo === qgsmaplayerproxymodel.h content ===
-        type C:\OSGeo4W\apps\qgis-ltr-dev\include\qgis\qgsmaplayerproxymodel.h
+        type C:\OSGeo4W\apps\qgis-ltr\include\qgis\qgsmaplayerproxymodel.h
         echo.
         echo === qgswkbtypes.h enum section ===
-        findstr /n "GeometryType\|LineGeometry\|PointGeometry\|enum" C:\OSGeo4W\apps\qgis-ltr-dev\include\qgis\qgswkbtypes.h
+        findstr /n "GeometryType\|LineGeometry\|PointGeometry\|enum" C:\OSGeo4W\apps\qgis-ltr\include\qgis\qgswkbtypes.h
         echo.
         echo === Lib Directory ===
-        dir C:\OSGeo4W\apps\qgis-ltr-dev\lib
+        dir C:\OSGeo4W\apps\qgis-ltr\lib
 
     # --- Build Step (Windows with OSGeo4W) ---
     - name: Build QGIS Plugin
@@ -79,8 +79,8 @@ jobs:
         cmake .. -G "Ninja" ^
           -DCMAKE_BUILD_TYPE=Release ^
           -DCMAKE_PREFIX_PATH="%OSGEO4W_ROOT%" ^
-          -DQGIS_INCLUDE_DIR="%OSGEO4W_ROOT%\apps\qgis-ltr-dev\include" ^
-          -DQGIS_LIBRARY_DIR="%OSGEO4W_ROOT%\apps\qgis-ltr-dev\lib" ^
+          -DQGIS_INCLUDE_DIR="%OSGEO4W_ROOT%\apps\qgis-ltr\include" ^
+          -DQGIS_LIBRARY_DIR="%OSGEO4W_ROOT%\apps\qgis-ltr\lib" ^
           -DQt5_DIR="%OSGEO4W_ROOT%\apps\Qt5\lib\cmake\Qt5"
           
         cmake --build . --config Release
