--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,9 +15,6 @@ jobs:
     - uses: actions/checkout@v4
 
     # --- Setup OSGeo4W with QGIS Development Tools ---
-    # Install qgis-ltr-dev for headers (needed to compile).
-    # Our code only uses API calls that exist in QGIS 3.28.3 (user's install),
-    # so the resulting DLL will load fine despite being compiled against dev headers.
     - name: Install OSGeo4W and QGIS Dev Tools
       shell: cmd
       timeout-minutes: 15
@@ -35,48 +32,81 @@ jobs:
     - name: Wait for Installation to Complete
       shell: pwsh
       run: Start-Sleep -Seconds 30
-      
-    - name: Verify QGIS Installation
-      shell: cmd
+
+    # Find the actual paths where QGIS headers ended up      
+    - name: Discover QGIS Installation Paths
+      shell: pwsh
       run: |
-        set OSGEO4W_ROOT=C:\OSGeo4W
-        echo Checking QGIS installation structure...
-        dir "%OSGEO4W_ROOT%\apps\qgis-ltr\include\qgis" | findstr /i "qgsmaplayerproxymodel\|qgswkbtypes\|qgsraster"
-        echo === Checking old-style API in headers ===
-        findstr /n "IdentifyFormatValue\|IdentifyFormat" "%OSGEO4W_ROOT%\apps\qgis-ltr\include\qgis\qgsraster.h"
-        findstr /n "LineGeometry\|PointGeometry" "%OSGEO4W_ROOT%\apps\qgis-ltr\include\qgis\qgswkbtypes.h"
-        findstr /n "RasterLayer\|VectorLayer" "%OSGEO4W_ROOT%\apps\qgis-ltr\include\qgis\qgsmaplayerproxymodel.h"
+        Write-Host "=== Top-level OSGeo4W\apps ==="
+        Get-ChildItem "C:\OSGeo4W\apps" -ErrorAction SilentlyContinue | Select-Object Name,LastWriteTime
+
+        Write-Host "`n=== Searching for qgisconfig.h (header root indicator) ==="
+        Get-ChildItem "C:\OSGeo4W" -Recurse -Filter "qgisconfig.h" -ErrorAction SilentlyContinue | Select-Object FullName
+
+        Write-Host "`n=== Searching for qgsraster.h ==="
+        Get-ChildItem "C:\OSGeo4W" -Recurse -Filter "qgsraster.h" -ErrorAction SilentlyContinue | Select-Object FullName
+
+        Write-Host "`n=== Searching for qgis_core.lib ==="
+        Get-ChildItem "C:\OSGeo4W" -Recurse -Filter "qgis_core.lib" -ErrorAction SilentlyContinue | Select-Object FullName
+
+        Write-Host "`n=== Searching for qgis_3d.lib ==="
+        Get-ChildItem "C:\OSGeo4W" -Recurse -Filter "qgis_3d.lib" -ErrorAction SilentlyContinue | Select-Object FullName
 
     # --- Build Step (Windows with OSGeo4W) ---
     - name: Build QGIS Plugin
-      shell: cmd
+      shell: pwsh
       run: |
-        set OSGEO4W_ROOT=C:\OSGeo4W
-        call "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
-        set PATH=%OSGEO4W_ROOT%\bin;%PATH%
+        $OSGEO4W = "C:\OSGeo4W"
+
+        # Dynamically find header and lib paths
+        $headerFile = Get-ChildItem "$OSGEO4W" -Recurse -Filter "qgsraster.h" -ErrorAction SilentlyContinue | Select-Object -First 1
+        if (-not $headerFile) { Write-Error "Cannot find qgsraster.h!"; exit 1 }
+        $QGIS_INCLUDE = $headerFile.Directory.FullName
+        Write-Host "Found QGIS headers at: $QGIS_INCLUDE"
+
+        $libFile = Get-ChildItem "$OSGEO4W" -Recurse -Filter "qgis_core.lib" -ErrorAction SilentlyContinue | Select-Object -First 1
+        if (-not $libFile) { Write-Error "Cannot find qgis_core.lib!"; exit 1 }
+        $QGIS_LIB = $libFile.Directory.FullName
+        Write-Host "Found QGIS libs at: $QGIS_LIB"
+
+        # Find Qt5
+        $qt5cmake = Get-ChildItem "$OSGEO4W" -Recurse -Filter "Qt5Config.cmake" -ErrorAction SilentlyContinue | Select-Object -First 1
+        $Qt5_DIR = if ($qt5cmake) { $qt5cmake.Directory.FullName } else { "$OSGEO4W\apps\Qt5\lib\cmake\Qt5" }
+        Write-Host "Qt5 cmake dir: $Qt5_DIR"
+
+        # Setup MSVC
+        $vcvars = "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
         
-        mkdir build
+        New-Item -ItemType Directory -Force -Path build | Out-Null
+        
+        $buildScript = @"
+        call "$vcvars"
+        set PATH=$OSGEO4W\bin;%PATH%
         cd build
-        
         cmake .. -G "Ninja" ^
           -DCMAKE_BUILD_TYPE=Release ^
-          -DCMAKE_PREFIX_PATH="%OSGEO4W_ROOT%" ^
-          -DQGIS_INCLUDE_DIR="%OSGEO4W_ROOT%\apps\qgis-ltr\include" ^
-          -DQGIS_LIBRARY_DIR="%OSGEO4W_ROOT%\apps\qgis-ltr\lib" ^
-          -DQt5_DIR="%OSGEO4W_ROOT%\apps\Qt5\lib\cmake\Qt5"
-          
+          -DCMAKE_PREFIX_PATH="$OSGEO4W" ^
+          -DQGIS_INCLUDE_DIR="$QGIS_INCLUDE" ^
+          -DQGIS_LIBRARY_DIR="$QGIS_LIB" ^
+          -DQt5_DIR="$Qt5_DIR"
+        if errorlevel 1 exit /b 1
         cmake --build . --config Release
+        if errorlevel 1 exit /b 1
+"@
+        $buildScript | Out-File -FilePath "run_build.bat" -Encoding ASCII
+        cmd /c "run_build.bat"
+        if ($LASTEXITCODE -ne 0) { exit $LASTEXITCODE }
 
     # --- Show exactly what is exported from the DLL ---
     - name: Inspect DLL Exports
-      shell: cmd
+      shell: pwsh
       run: |
-        call "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
-        echo === Exported symbols from plugin DLL ===
-        for /r .\build %%f in (*.dll) do (
-          echo --- %%f ---
-          dumpbin /exports "%%f"
-        )
+        $vcvars = "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
+        Get-ChildItem -Path ".\build" -Filter "*.dll" -Recurse | ForEach-Object {
+          Write-Host "=== $($_.FullName) ==="
+          $script = "call `"$vcvars`" && dumpbin /exports `"$($_.FullName)`""
+          cmd /c $script
+        }
 
     # --- Upload Artifacts ---
     - name: Upload Plugin
